feat: adiciona Prompt_Config__mdt, registros e refatora promptOpsLayer

--- a/force-app/main/default/lwc/promptOpsLayer/promptOpsLayer.html
+++ b/force-app/main/default/lwc/promptOpsLayer/promptOpsLayer.html
@@ -1,6 +1,5 @@
 <template> 
-  <lightning-button label="PromptOps" onclick={handleToggle} class="slds-m-bottom_small"></lightning-button>
-
+  <lightning-button label="Gerar Prompt para IA" title="Abrir assistente de geração de prompt" onclick={handleToggle} class="slds-m-bottom_small"></lightning-button>
   <template if:true={isVisible}>
     <section class="prompt-popup slds-box slds-theme_default slds-m-top_small">
       <h2 class="slds-text-heading_small">Prompt sugerido</h2>
